add linear progress bar with counter

--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="baker_miller_pink">#FF99AA</color>
     <color name="green_ryb">#66BF39</color>
     <color name="sizzling_red">#FF3355</color>
+    <color name="deep_lilac">#864CBF</color>
+    <color name="blue_violet">#741BDF</color>
 </resources>
