--- a/quiz/src/main/res/layout/fragment_quiz.xml
+++ b/quiz/src/main/res/layout/fragment_quiz.xml
@@ -11,17 +11,17 @@
         android:id="@+id/loading_progress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
     <include
         android:id="@+id/result_banner"
         layout="@layout/result_banner"
         android:paddingBottom="@dimen/padding_bottom_result_banner"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
 
@@ -29,9 +29,9 @@
         android:id="@+id/counter"
         layout="@layout/question_counter"
         android:layout_width="wrap_content"
-        android:layout_marginTop="@dimen/question_counter_margin_top"
-        android:layout_marginStart="@dimen/question_counter_margin_start"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/question_counter_margin_start"
+        android:layout_marginTop="@dimen/question_counter_margin_top"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -51,8 +51,8 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/tittle_text_margin_end"
         android:text="@string/quiz"
-        android:textStyle="bold"
         android:textColor="@color/black"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/tittle_background"
         app:layout_constraintEnd_toEndOf="@id/tittle_background"
         app:layout_constraintStart_toEndOf="@id/tittle_image"
@@ -86,8 +86,8 @@
         android:layout_height="@dimen/question_text_background_height"
         android:layout_marginHorizontal="@dimen/question_text_background_margin_horizontal"
         android:layout_marginTop="@dimen/question_image_margin_top"
-        android:backgroundTint="@color/white"
         android:background="@drawable/background_rounded_white_radius_10"
+        android:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/question_image" />
@@ -96,9 +96,9 @@
         android:id="@+id/question_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/white"
         android:gravity="center"
         android:padding="@dimen/question_text_padding"
-        android:backgroundTint="@color/white"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="@id/question_text_background"
         app:layout_constraintEnd_toEndOf="@id/question_text_background"
@@ -120,20 +120,34 @@
         app:spanCount="2"
         tools:itemCount="4"
         tools:listitem="@layout/item_choice" />
-    
+
     <Button
         android:id="@+id/continue_button"
         android:layout_width="@dimen/continue_button_width"
         android:layout_height="@dimen/continue_button_height"
-        android:visibility="invisible"
-        android:textAllCaps="false"
-        tools:visibility="visible"
-        android:background="@drawable/background_rounded_white_radius_10"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginBottom="@dimen/continue_button_margin_bottom"
-        android:text="@string/continue_button"/>
+        android:background="@drawable/background_rounded_white_radius_10"
+        android:text="@string/continue_button"
+        android:textAllCaps="false"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:visibility="visible" />
+
+    <ProgressBar
+        android:id="@+id/linear_progress_bar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/continue_button_margin_bottom"
+        android:indeterminate="false"
+        android:visibility="invisible"
+        tools:progress="50"
+        android:progressDrawable="@drawable/linear_progress_bar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
